--- a/index.html
+++ b/index.html
@@ -1,2 +1,60 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Ayannah Reuben</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="normalize.css"/>
+	<link rel="stylesheet" type="text/css" href="styles.css"/>	
+</head>
+<body>
+	<!-- NAV BAR -->
+	<nav>
+		<div class="navLeft">
+			<h3><a href="#" class="navLogo">AYANNAH REUBEN</a></h3>
+		</div>
+			
+		<div class="navRight">
+			<a href="#main">ABOUT</a>
+			<a href="#article">PORTFOLIO</a>
+			<a href="#footer">CONTACT</a>
+		</div>
+			
+		<div class="navResponsive">
+			<h3><a href="#">MENU</a></h3>
+		</div>
+		
+	</nav>	
+	<!-- /NAV BAR -->
+	
+	
+	
+	
+	
+	<!-- HEADER -->		
+	<header>
+		<p>header</p>
+		
+	</header>
+	<!-- /HEADER -->
+	
+	
+	
+	
+	<main>
+	</main>
+	
+	<article>
+		
+	</article>
+	
+
+	
+	<footer>
+		
+	</footer>		
+	
+	
+	
+</body>
 </html>
