--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css"/>	
 </head>
 <body>
-	<!-- NAV BAR -->
+	<!-- NAV BAR LINKS AROUD PAGE-->
 	<nav>
 		<div class="navLeft">
 			<h3><a href="#" class="navLogo">AYANNAH REUBEN</a></h3>
@@ -31,9 +31,12 @@
 	
 	
 	
-	<!-- HEADER -->		
+	<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
 	<header>
-		<p>header</p>
+		<section class="sectionHeader">
+			<h1>Hi</h1>
+			<h2>I'm a Full-stack Developer</h2>
+		</section>
 		
 	</header>
 	<!-- /HEADER -->
@@ -41,19 +44,43 @@
 	
 	
 	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<!-- MAIN -- ABOUT SECTION -->	
 	<main>
 	</main>
+	<!-- /HEADER -->
 	
+	
+	
+	<!-- ARTICLE -- PORTFOLIO WORK SECTION-->
 	<article>
 		
 	</article>
-	
+	<!-- /ARTICLE -->
 
-	
+	<!-- FOOTER -- CONTACT SECTION -->
 	<footer>
-		
-	</footer>		
-	
+		<div class="footerUpper">
+			<h3><a href="#" class="footerLogo">CONTACT ME</a></h3>
+		</div>
+		<div class="footerLower">
+			<a href="https://github.com/alreuben" target="blank_"><img src="images/github.png" alt="gitgub link"></a>
+			<a href="" target="blank_"><img src="images/linkedin.png" alt="linkedn link"></a>
+		</div>
+				
+	<!-- /FOOTER -->
 	
 	
 </body>
