--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 	<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
 	<header>
 		<section class="sectionHeader">
-			<h1>Hi</h1>
-			<h2>I'm a Full-stack Developer</h2>
+			<h1>Hello</h1>
+			<h2><blockquote>I'm a Full-stack Developer</blockquote></h2>
 		</section>
 		
 	</header>
@@ -59,6 +59,17 @@
 	
 	<!-- MAIN -- ABOUT SECTION -->	
 	<main>
+		<section class="mainFirst">
+			<div>
+				<p>A copy build of the Hello Word which focuses on flex alignmentp>
+			</div>
+			<div>
+				<p>A copy build of the Pilot Shop website that uses a multiple responsive navigation bars.</p>
+			</div>
+			<div>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+			</div>
+		</section>
 	</main>
 	<!-- /HEADER -->
 	
@@ -73,11 +84,15 @@
 	<!-- FOOTER -- CONTACT SECTION -->
 	<footer>
 		<div class="footerUpper">
-			<h3><a href="#" class="footerLogo">CONTACT ME</a></h3>
+			<h3 class="footerLogo">CONTACT ME</h3>
 		</div>
 		<div class="footerLower">
 			<a href="https://github.com/alreuben" target="blank_"><img src="images/github.png" alt="gitgub link"></a>
 			<a href="" target="blank_"><img src="images/linkedin.png" alt="linkedn link"></a>
+		</div>
+		
+		<div class="footerResponsive">
+			<h3><a href="#" class="footerLogoResponsive">CONTACT ME</a></h3>
 		</div>
 				
 	<!-- /FOOTER -->
