portfolio general layout

--- a/index.html
+++ b/index.html
@@ -52,22 +52,11 @@
 	
 	
 	
-	
-	
-	
-	
-	
 	<!-- MAIN -- ABOUT SECTION -->	
 	<main>
-		<section class="mainFirst">
+		<section class="mainSection">
 			<div>
-				<p>A copy build of the Hello Word which focuses on flex alignmentp>
-			</div>
-			<div>
-				<p>A copy build of the Pilot Shop website that uses a multiple responsive navigation bars.</p>
-			</div>
-			<div>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<p>about me</p>
 			</div>
 		</section>
 	</main>
@@ -75,11 +64,49 @@
 	
 	
 	
+	
+	
+	
+	
+	
+	
+	
+	
 	<!-- ARTICLE -- PORTFOLIO WORK SECTION-->
 	<article>
-		
+		<section class="articleHeader">
+			<h2 class="articleLogo">MY PORTFOLIO</h2>
+		</section>
+		<section class="articleSection">
+			<div class="articleLeft">
+				<img src="images/img1.png" alt="screenshot of hello word website"></a>
+				<h4>HELLO WORLD</h4>
+				<p>A copy build of the Hello Word which focuses on flex alignment.</p>
+			</div>
+			
+			<div class="articleMiddle">
+				<h4>PILOT SHOP</h4>
+				<p>A copy build of the Pilot Shop website that uses a multiple responsive navigation bars.</p>
+			</div>
+			
+			<div class="articleRight">
+				<h4>LOREM IPSUM</h4>
+			<p>parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc.</p>
+			</div>
+		</section>
 	</article>
 	<!-- /ARTICLE -->
+
+
+
+
+
+
+
+
+
+
+
 
 	<!-- FOOTER -- CONTACT SECTION -->
 	<footer>
@@ -94,7 +121,7 @@
 		<div class="footerResponsive">
 			<h3><a href="#" class="footerLogoResponsive">CONTACT ME</a></h3>
 		</div>
-				
+			</footer>	
 	<!-- /FOOTER -->
 	
 	
