complete general layout

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		</div>
 			
 		<div class="navRight">
-			<a href="#main">ABOUT</a>
-			<a href="#article">PORTFOLIO</a>
-			<a href="#footer">CONTACT</a>
+			<a href="#aboutMe">ABOUT</a>
+			<a href="#portfolio">PORTFOLIO</a>
+			<a href="#contact">CONTACT</a>
 		</div>
 			
 		<div class="navResponsive">
@@ -53,7 +53,7 @@
 	
 	
 	<!-- MAIN -- ABOUT SECTION -->	
-	<main>
+	<main id="aboutMe">
 		<section class="mainSection">
 			<div>
 				<p>about me</p>
@@ -73,7 +73,7 @@
 	
 	
 	<!-- ARTICLE -- PORTFOLIO WORK SECTION-->
-	<article>
+	<article id="portfolio">
 		<section class="articleHeader">
 			<h2 class="articleLogo">MY PORTFOLIO</h2>
 		</section>
@@ -109,7 +109,7 @@
 
 
 	<!-- FOOTER -- CONTACT SECTION -->
-	<footer>
+	<footer id="contact">
 		<div class="footerUpper">
 			<h3 class="footerLogo">CONTACT ME</h3>
 		</div>
