--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
 	<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
 	<header>
 		<section class="sectionHeader">
-			<h1>Hello</h1>
-			<h2><blockquote>I'm a Full-stack Developer</blockquote></h2>
+			<h1 id="headerUpper">Hello</h1>
+			<h1 id="headerLower">I'm Ayannah</h1>
+			<h2>I am a full-stack developer</h2>
 		</section>
 		
 	</header>
