--- a/index.html
+++ b/index.html
@@ -29,47 +29,33 @@
 	
 	
 	
-	
-	
 	<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
 	<header>
 		<section class="sectionHeader">
-			<h1 id="headerUpper">Hello</h1>
+			<h1 id="headerUpper">Hello,</h1>
 			<h1 id="headerLower">I'm Ayannah</h1>
 			<h2>I am a full-stack developer</h2>
 		</section>
-		
 	</header>
 	<!-- /HEADER -->
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
 	
 	<!-- MAIN -- ABOUT SECTION -->	
 	<main id="aboutMe">
 		<section class="mainSection">
-			<div>
-				<p>about me</p>
+			<div calss="mainInfo">
+				<h2>ABOUT ME</h2>
+				<p>I am currently enrolled on the Full-Stack Developer course at iO Academy and will be graduating in April 2023.</p>
+				<p>So far, I have learned how to use HTML and CSS for front-end development.</p>
+				<p>Prior to attending the course, I went to University to study Information Technology Management and Business. I also worked in an IT company for 3 years, where my role was a Junior Product Consultant.</p>
+			</div>
+			<div class="mainImage">
+			<img src="images/avatar.png" alt="avatar">
 			</div>
 		</section>
 	</main>
 	<!-- /HEADER -->
-	
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	
@@ -80,17 +66,19 @@
 		</section>
 		<section class="articleSection">
 			<div class="articleLeft">
-				<img src="images/img1.png" alt="screenshot of hello word website"></a>
+				<img src="images/img1.png" alt="screenshot of hello word website">
 				<h4>HELLO WORLD</h4>
-				<p>A copy build of the Hello Word which focuses on flex alignment.</p>
+				<p>A copy build of the Hello Word demo site which focuses on using flex, and all its special features.</p>
 			</div>
 			
 			<div class="articleMiddle">
+				<img src="images/img2.png" alt="screenshot of hello word website">
 				<h4>PILOT SHOP</h4>
-				<p>A copy build of the Pilot Shop website that uses a multiple responsive navigation bars.</p>
+				<p>A copy build of the Pilot Shop website that uses multiple responsive navigation bars.</p>
 			</div>
 			
 			<div class="articleRight">
+				<img src="images/img3.png" alt="screenshot of hello word website">
 				<h4>LOREM IPSUM</h4>
 			<p>parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc.</p>
 			</div>
@@ -100,23 +88,14 @@
 
 
 
-
-
-
-
-
-
-
-
-
 	<!-- FOOTER -- CONTACT SECTION -->
 	<footer id="contact">
 		<div class="footerUpper">
 			<h3 class="footerLogo">CONTACT ME</h3>
 		</div>
 		<div class="footerLower">
-			<a href="https://github.com/alreuben" target="blank_"><img src="images/github.png" alt="gitgub link"></a>
-			<a href="" target="blank_"><img src="images/linkedin.png" alt="linkedn link"></a>
+			<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link"></a>
+			<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link"></a>
 		</div>
 		
 		<div class="footerResponsive">
