--- a/index.html
+++ b/index.html
@@ -98,8 +98,13 @@
 			<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link"></a>
 		</div>
 		
+		<div class="footerCopyright">
+			<p>© Copyright Ayannah Reuben 2023</p>
+		</div>
+			
 		<div class="footerResponsive">
 			<h3><a href="#" class="footerLogoResponsive">CONTACT ME</a></h3>
+			<p>© Copyright Ayannah Reuben 2023</p>
 		</div>
 			</footer>	
 	<!-- /FOOTER -->
