code review amendments

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 			
 		<div class="navResponsive">
-			<h3><a href="#">MENU</a></h3>
+			<h3><a href="#">MENU ⌁</a></h3>
 		</div>
 		
 	</nav>	
@@ -44,7 +44,7 @@
 	<!-- ARTCLE -- ABOUT SECTION -->	
 	<article id="aboutMe">
 		<section class="aboutMeSection">
-			<div calss="articleInfo">
+			<div class="articleInfo">
 				<h2>ABOUT ME</h2>
 				<p>I am currently enrolled on the Full-Stack Developer course at iO Academy and will be graduating in April 2023.</p>
 				<p>So far, I have learned how to use HTML and CSS for front-end development.</p>
@@ -54,7 +54,7 @@
 			<img src="images/avatar.png" alt="avatar">
 			</div>
 		</section>
-	</main>
+	</article>
 	
 	
 
@@ -66,7 +66,7 @@
 		
 		<section class="portfolioSection">
 			<article class="portfolioContainer">
-					<img src="images/img1.png" alt="screenshot of hello word website" />
+					<img src="images/img1.png" alt="screenshot of hello word website"/>
 					<div class="portfolioText">
 						<h4>HELLO WORLD</h4>
 						<p>A copy build of the Hello Word demo site which focuses on using flex, and all its special features.</p>
@@ -74,7 +74,7 @@
 				</article>
 				
 				<article class="portfolioContainer">
-					<img src="images/img2.png" alt="screenshot of pilot shop website" />
+					<img src="images/img2.png" alt="screenshot of pilot shop website"/>
 					<div class="portfolioText">
 						<h4>PILOT SHOP</h4>
 						<p>A copy build of the Pilot Shop website that uses multiple responsive navigation bars.</p>
@@ -82,7 +82,7 @@
 				</article>
 				
 				<article class="portfolioContainer">
-					<img src="images/img3.png" alt="" />
+					<img src="images/img3.png" alt="final fantasy website" />
 					<div class="portfolioText">
 						<h4>LOREM IPSUM</h4>
 						<p>parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc.</p>
@@ -97,9 +97,9 @@
 			<h3 class="footerLogo">CONTACT ME</h3>
 		</div>
 		<div class="footerLower">
-			<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link" /></a>
-			<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link" /></a>
-			<a href="mailto:ayannahreuben@gmail.com" target="_blank"><img src="images/email.png" alt="email link" /></a>
+			<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link"/></a>
+			<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link"/></a>
+			<a href="mailto:ayannahreuben@gmail.com" target="_blank"><img src="images/email.png" alt="email link"/></a>
 		</div>
 		
 		<div class="footerCopyright">
@@ -107,7 +107,7 @@
 		</div>
 			
 		<div class="footerResponsive">
-			<h3><a href="#" class="footerLogoResponsive">CONTACT ME</a></h3>
+			<h3><a href="#" class="footerLogoResponsive">CONTACT ME ⌁</a></h3>
 			<p>© Copyright Ayannah Reuben 2023</p>
 		</div>
 			</footer>	
