final code review change

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 				<p>So far, I have learned how to use HTML and CSS for front-end development.</p>
 				<p>Prior to attending the course, I went to University to study Information Technology Management and Business. I also worked in an IT company for 3 years, where my role was a Junior Product Consultant.</p>
 			</div>
-			<div class="articleImage">
+			<figure class="articleImage">
 			<img src="images/avatar.png" alt="avatar">
-			</div>
+		</figure>
 		</section>
 	</article>
 	
