--- a/index.html
+++ b/index.html
@@ -1,71 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Ayannah Reuben</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="normalize.css"/>
-	<link rel="stylesheet" type="text/css" href="styles.css"/>	
-</head>
-<body>
-	<!-- NAV BAR LINKS AROUD PAGE-->
-	<nav>
-		<div class="navLeft">
-			<h3><a href="#" class="navLogo">AYANNAH REUBEN</a></h3>
-		</div>
-			
-		<div class="navRight">
-			<a href="#aboutMe">ABOUT</a>
-			<a href="#portfolio">PORTFOLIO</a>
-			<a href="#contact">CONTACT</a>
-		</div>
-			
-		<div class="navResponsive">
-			<h3><a href="#">MENU ⌁</a></h3>
-		</div>
-		
-	</nav>	
-	<!-- /NAV BAR -->
-	
-	
-	
-	<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
-	<header>
-		<section class="sectionHeader">
-			<h1 id="headerUpper">Hello,</h1>
-			<h1 id="headerLower">I'm Ayannah</h1>
-			<h2>I am a full-stack developer</h2>
-		</section>
-	</header>
-	<!-- /HEADER -->
-	
-
-	
-	<!-- ARTCLE -- ABOUT SECTION -->	
-	<article id="aboutMe">
-		<section class="aboutMeSection">
-			<div class="articleInfo">
-				<h2>ABOUT ME</h2>
-				<p>I am currently enrolled on the Full-Stack Developer course at iO Academy and will be graduating in April 2023.</p>
-				<p>So far, I have learned how to use HTML and CSS for front-end development.</p>
-				<p>Prior to attending the course, I went to University to study Information Technology Management and Business. I also worked in an IT company for 3 years, where my role was a Junior Product Consultant.</p>
+	<head>
+		<meta charset="UTF-8">
+		<title>Ayannah Reuben</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="normalize.css"/>
+		<link rel="stylesheet" type="text/css" href="styles.css"/>	
+	</head>
+	<body>
+		<!-- NAV BAR LINKS AROUD PAGE-->
+		<nav>
+			<div class="navLeft">
+				<h3><a href="#" class="navLogo">AYANNAH REUBEN</a></h3>
 			</div>
-			<figure class="articleImage">
-			<img src="images/avatar.png" alt="avatar">
-		</figure>
-		</section>
-	</article>
+			<div class="navRight">
+				<a href="#aboutMe">ABOUT</a>
+				<a href="#portfolio">PORTFOLIO</a>
+				<a href="#contact">CONTACT</a>
+			</div>
+			<div class="navResponsive">
+				<h3><a href="#">MENU ⌁</a></h3>
+			</div>
+		</nav>	
+		<!-- /NAV BAR -->
 	
+		<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
+		<header>
+			<section class="sectionHeader">
+				<h1 id="headerUpper">Hello,</h1>
+				<h1 id="headerLower">I'm Ayannah</h1>
+				<h2>I am a full-stack developer</h2>
+			</section>
+		</header>
+		<!-- /HEADER -->
 	
-
-	<!-- MAIN -- PORTFOLIO SECTION -->	
-	<main id="portfolio">
-		<section class="portfolioHeader">
-			<h2 class="portfolioLogo">MY PORTFOLIO</h2>
-		</section>
+		<!-- ARTCLE -- ABOUT SECTION -->	
+		<article id="aboutMe">
+			<section class="aboutMeSection">
+				<div class="articleInfo">
+					<h2>ABOUT ME</h2>
+					<p>I am currently enrolled on the Full-Stack Developer course at iO Academy and will be graduating in April 2023.</p>
+					<p>So far, I have learned how to use HTML and CSS for front-end development.</p>
+					<p>Prior to attending the course, I went to University to study Information Technology Management and Business. I also worked in an IT company for 3 years, where my role was a Junior Product Consultant.</p>
+				</div>
+				<figure class="articleImage">
+					<img src="images/avatar.png" alt="avatar">
+				</figure>
+			</section>
+		</article>
+		<!-- /ARTCLE -- ABOUT SECTION -->
+	
+		<!-- MAIN -- PORTFOLIO SECTION -->	
+		<main id="portfolio">
+			<section class="portfolioHeader">
+				<h2 class="portfolioLogo">MY PORTFOLIO</h2>
+			</section>
 		
-		<section class="portfolioSection">
-			<article class="portfolioContainer">
+			<section class="portfolioSection">
+				<article class="portfolioContainer">
 					<img src="images/img1.png" alt="screenshot of hello word website"/>
 					<div class="portfolioText">
 						<h4>HELLO WORLD</h4>
@@ -88,29 +80,28 @@
 						<p>parturient montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada nunc.</p>
 					</div>
 				</article>
-		</section>
-	</main>
+			</section>
+		</main>
+		<!-- /MAIN -- PORTFOLIO SECTION -->
 
-	<!-- FOOTER -- CONTACT SECTION -->
-	<footer id="contact">
-		<div class="footerUpper">
-			<h3 class="footerLogo">CONTACT ME</h3>
-		</div>
-		<div class="footerLower">
-			<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link"/></a>
-			<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link"/></a>
-			<a href="mailto:ayannahreuben@gmail.com" target="_blank"><img src="images/email.png" alt="email link"/></a>
-		</div>
-		
-		<div class="footerCopyright">
-			<p>© Copyright Ayannah Reuben 2023</p>
-		</div>
-			
-		<div class="footerResponsive">
-			<h3><a href="#" class="footerLogoResponsive">CONTACT ME ⌁</a></h3>
-			<p>© Copyright Ayannah Reuben 2023</p>
-		</div>
-			</footer>	
-	<!-- /FOOTER -->
-</body>
+		<!-- FOOTER -- CONTACT SECTION -->
+		<footer id="contact">
+			<div class="footerUpper">
+				<h3 class="footerLogo">CONTACT ME</h3>
+			</div>
+			<div class="footerLower">
+				<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link"/></a>
+				<a href="https://www.linkedin.com/in/ayannah-reuben-552335142" target="_blank"><img src="images/linkedin.png" alt="linkedn link"/></a>
+				<a href="mailto:ayannahreuben@gmail.com" target="_blank"><img src="images/email.png" alt="email link"/></a>
+			</div>
+			<div class="footerCopyright">
+				<p>© Copyright Ayannah Reuben 2023</p>
+			</div>
+			<div class="footerResponsive">
+				<h3><a href="#" class="footerLogoResponsive">CONTACT ME ⌁</a></h3>
+				<p>© Copyright Ayannah Reuben 2023</p>
+			</div>
+		</footer>	
+		<!-- /FOOTER -->
+	</body>
 </html>
