code review changes

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 		<!-- HEADER -- HERO IMAGE AND INTRO SECTION -->		
 		<header>
 			<section class="sectionHeader">
-				<h1 id="headerUpper">Hello,</h1>
-				<h1 id="headerLower">I'm Ayannah</h1>
+				<h1 class="headerUpper">Hello,</h1>
+				<h1 class="headerLower">I'm Ayannah</h1>
 				<h2>I am a full-stack developer</h2>
 			</section>
 		</header>
@@ -87,7 +87,7 @@
 		<!-- FOOTER -- CONTACT SECTION -->
 		<footer id="contact">
 			<div class="footerUpper">
-				<h3 class="footerLogo">CONTACT ME</h3>
+				<h3>CONTACT ME</h3>
 			</div>
 			<div class="footerLower">
 				<a href="https://github.com/alreuben" target="_blank"><img src="images/github.png" alt="gitgub link"/></a>
@@ -98,7 +98,7 @@
 				<p>© Copyright Ayannah Reuben 2023</p>
 			</div>
 			<div class="footerResponsive">
-				<h3><a href="#" class="footerLogoResponsive">CONTACT ME ⌁</a></h3>
+				<h3><a href="#">CLICK HERE TO CONTACT ME ⌁</a></h3>
 				<p>© Copyright Ayannah Reuben 2023</p>
 			</div>
 		</footer>	
