changes for main

--- a/index.html
+++ b/index.html
@@ -60,16 +60,20 @@
 				<article class="portfolioContainer">
 					<img src="images/img1.png" alt="screenshot of hello word website"/>
 					<div class="portfolioText">
-						<h4>HELLO WORLD</h4>
-						<p>A copy build of the Hello Word demo site which focuses on using flex, and all its special features.</p>
+						<h4>COLLECTION APP</h4>
+						<p>A PHP collection of games that lets users add their favourite game to an SQL database</p>
+						<p class="portfolioLinks"><a href="http://localhost:1234/W5/alr-collection/index.php" target="_blank">github code</a>
+						<p class="portfolioLinks"><a href="http://localhost:1234/W5/alr-collection/index.php" target="_blank">Live project</a>
 					</div>
 				</article>
 				
 				<article class="portfolioContainer">
-					<img src="images/img2.png" alt="screenshot of pilot shop website"/>
+					<img src="images/map.png" alt="screenshot of pilot shop website"/>
 					<div class="portfolioText">
-						<h4>PILOT SHOP</h4>
+						<h4>MAP COUNTY GAME</h4>
 						<p>A copy build of the Pilot Shop website that uses multiple responsive navigation bars.</p>
+						<p class="portfolioLinks"><a href="#" target="_blank">github code</a>
+						<p class="portfolioLinks"><a href="https://23jan-county-guess.dev.io-academy.uk/" target="_blank">Live project</a>
 					</div>
 				</article>
 				
