--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
-					<img src="images/legacy2.png" class="card-img-top rounded" alt='screenshot of project management API'>
+					<img src="images/legacy.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
 						<h4 class="card-title">ACADEMY PORTAL</h4>
 						<p class="card-text">Working on a legacy database, we were tasked with editing the Academy Portal and bug fixing. I worked on creating checkbox event listeners which made form inputs appear and the error handling if inputs did not meet validation. This project was built using JavaScript.</p>
