--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<p class="card-text">Using a populated MongoDB database, I have created a todo list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/alreuben/todoListApi" class="card-link">Github code</a>
+						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>
 					</div>
 				</article>
 			</div>
@@ -62,21 +62,21 @@
 						<p class="card-text">Working on a legacy database, we were tasked with editing the Academy Portal and bug fixing. I worked on creating checkbox event listeners which made form inputs appear and the error handling if inputs did not meet validation. This project was built using JavaScript.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/iO-Academy/AcademyPortal" class="card-link">Github code</a>
-						<a href="https://portal.dev.io-academy.uk/" class="card-link">Live project</a>
+						<a href="https://github.com/iO-Academy/AcademyPortal" class="card-link" target="_blank">Github code</a>
+						<a href="https://portal.dev.io-academy.uk/" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
-					<img src="images/api2.png" class="card-img-top rounded" alt='screenshot of project management API'>
+					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
 						<h4 class="card-title">PROJECT MANAGEMENT API</h4>
-						<p class="card-text">With a pre-existing front-end, we created a backend API that supported GET requests. Using PHP Object Oriented Programming and SQL. I worked on error handling and retrieving the SQL database data and turning it into JSON data.</p>
+						<p class="card-text">With a pre-existing front-end, we created a backend API that supports GET requests using PHP Object-Oriented Programming and SQL. I worked on error handling and retrieving the SQL database data and turning it into JSON data.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link">Github code</a>
+						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link" target="_blank">Github code</a>
 					</div>
 				</article>
 			</div>
@@ -89,8 +89,8 @@
 						<p class="card-text">A React Food delivery app that fetches data from a pre-existing API. The app allows you to choose from a selection of Restaurants, and add items to your basket.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/iO-Academy/23-jan-foodDeliveryFE" class="card-link">Github code</a>
-						<a href="" class="card-link">Live project</a>
+						<a href="https://github.com/iO-Academy/23-jan-foodDeliveryFE" class="card-link" target="_blank">Github code</a>
+						<a href="" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
@@ -117,8 +117,8 @@
 						<p class="card-text">An app that shows a collection of games and lets users add their favourite game to an SQL database using PHP. This app uses form validation and sanitsation and prevents unsafe or malicious SQL injection.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
-						<a href="https://github.com/alreuben/alr-collection" class="card-link">Github code</a>
-						<a href="http://localhost:1234/W5/alr-collection/index.php" class="card-link">Live project</a>
+						<a href="https://github.com/alreuben/alr-collection" class="card-link" target="_blank">Github code</a>
+						<a href="http://localhost:1234/W5/alr-collection/index.php" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
