--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Ayannah Reuben</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-	<!--  <link rel="stylesheet" type="text/css" href="styles.css"/>-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="styles.css" />
 </head>
@@ -23,7 +22,7 @@
 		<h1 class="pt-5 text-center">Ayannah Reuben</h1>
 		<h2 class="pb-3 text-center">full-stack developer</h2>
 
-		<div class="icons col-12 d-flex justify-content-center pb-5">
+		<div class="icons col-12 d-flex flex-wrap justify-content-center pb-5">
 			<!--      <img class="icons px-3" src="images/html-5.png" alt="html logo"/>-->
 			<!--      <img class="icons px-3" src="images/css-3.png" alt="css logo"/>-->
 			<img class="icons px-3" src="images/php.png" alt="php logo"/>
@@ -34,12 +33,23 @@
 	</section>
 </header>
 
-
-<!-- MAIN -- PORTFOLIO SECTION -->
 <main id="portfolio">
 	<h1 class="p-3 text-center">PORTFOLIO</h1>
 	<section class="row">
 		<div class="card-group">
+
+<!--			<div class=" col-12 col-md-6 col-lg-4 cardHolder">-->
+<!--				<article class="card border-0 rounded">-->
+<!--					<img src="" class="card-img-top rounded" alt='screenshot of restful API'>-->
+<!--					<div class="card-body">-->
+<!--						<h4 class="card-title">RESTFUL API</h4>-->
+<!--						<p class="card-text">Using a populated MongoDB database, I have created a todo list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>-->
+<!--					</div>-->
+<!--					<div class="card-footer bg-transparent border-0">-->
+<!--						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>-->
+<!--					</div>-->
+<!--				</article>-->
+<!--			</div>-->
 
 			<div class=" col-12 col-md-6 col-lg-4 cardHolder">
 				<article class="card border-0 rounded">
@@ -90,7 +100,6 @@
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-foodDeliveryFE" class="card-link" target="_blank">Github code</a>
-						<a href="" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
@@ -118,7 +127,7 @@
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/alreuben/alr-collection" class="card-link" target="_blank">Github code</a>
-						<a href="http://localhost:1234/W5/alr-collection/index.php" class="card-link" target="_blank">Live project</a>
+						<a href="https://2023-ayannahr.dev.io-academy.uk/alr-collection/" class="card-link" target="_blank">Live project</a>
 					</div>
 				</article>
 			</div>
@@ -126,10 +135,6 @@
 		</div>
 	</section>
 </main>
-
-
-
-
 
 <footer id="contact">
 	<h2 class="text-center pt-5 mt-5">CONTACT ME</h2>
