--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body class="container-fluid">
 
 
-<nav class="navbar fixed-top bg-light px-5 ">
+<nav class="navbar fixed-top bg-light px-5">
 	<a class="navbar-brand" href="#page-top"><img class="nav-logo d-inline-block align-text-top" src="images/iO_Avatar3.png" alt="io badge" width="30" height="24" /></a>
 	<a class="nav-link" href="#contact">CONTACT ME</a>
 	<a class="nav-link" href="#portfolio">PORTFOLIO</a>
 </nav>
 
-<header>
+<header class='mt-5'>
 	<section id="page-top" class="sectionHeader">
 		<h1 class="pt-5 text-center">Ayannah Reuben</h1>
 		<h2 class="pb-3 text-center">full-stack developer</h2>
