--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 		<div class="icons col-12 d-flex flex-wrap justify-content-center pb-5">
 			<!--      <img class="icons px-3" src="images/html-5.png" alt="html logo"/>-->
 			<!--      <img class="icons px-3" src="images/css-3.png" alt="css logo"/>-->
-			<img class="icons px-3" src="images/php.png" alt="php logo"/>
-			<img class="icons px-3" src="images/js.png" alt="js logo"/>
-			<img class="icons px-3" src="images/react.png" alt="react logo"/>
-			<img class="icons px-3" src="images/node.png" alt="node logo"/>
+			<img class="icons px-2" src="images/php.png" alt="php logo"/>
+			<img class="icons px-2" src="images/js.png" alt="js logo"/>
+			<img class="icons px-2" src="images/react.png" alt="react logo"/>
+			<img class="icons px-2" src="images/node.png" alt="node logo"/>
 		</div>
 	</section>
 </header>
@@ -69,7 +69,7 @@
 					<img src="images/legacy.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
 						<h4 class="card-title">ACADEMY PORTAL</h4>
-						<p class="card-text">Working on a legacy database, we were tasked with editing the Academy Portal and bug fixing. I worked on creating checkbox event listeners which made form inputs appear and the error handling if inputs did not meet validation. This project was built using JavaScript.</p>
+						<p class="card-text">Working on a full-stack legacy app, we were tasked with editing the Academy Portal and fixing ongoing bugs. We added functionality which allowed Admin users to keep track of how many places are available on each course. This project was built using PHP Slim and JavaScript.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/AcademyPortal" class="card-link" target="_blank">Github code</a>
@@ -83,7 +83,7 @@
 					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
 						<h4 class="card-title">PROJECT MANAGEMENT API</h4>
-						<p class="card-text">With a pre-existing front-end, we created a backend API that supports GET requests using PHP Object-Oriented Programming and SQL. I worked on error handling and retrieving the SQL database data and turning it into JSON data.</p>
+						<p class="card-text">With a pre-existing front-end, we created a backend API that supports GET requests using PHP Object-Oriented Programming and SQL.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link" target="_blank">Github code</a>
