--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 				<article class="card border-0 rounded">
 					<img src="images/todoapi.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
-						<h4 class="card-title">TODO LIST API</h4>
-						<p class="card-text">Using a populated MongoDB database, I have created a todo list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>
+						<h4 class="card-title">TO-DO LIST API</h4>
+						<p class="card-text">Using a populated MongoDB database, I have created a to-do list Node API that uses Express. The API can handle GET, POST, PUT and DELETE requests from the user and returns status codes whilst relying on validation.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/alreuben/todoListApi" class="card-link" target="_blank">Github code</a>
@@ -83,7 +83,7 @@
 					<img src="images/api.png" class="card-img-top rounded" alt='screenshot of project management API'>
 					<div class="card-body">
 						<h4 class="card-title">PROJECT MANAGEMENT API</h4>
-						<p class="card-text">With a pre-existing front-end, we created a backend API that supports GET requests using PHP Object-Oriented Programming and SQL.</p>
+						<p class="card-text">With a pre-existing front-end, we created a back-end API that supports GET requests using PHP Object-Oriented Programming and SQL.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/iO-Academy/23-jan-projectManagementApi" class="card-link" target="_blank">Github code</a>
@@ -123,7 +123,7 @@
 					<img src="images/games.png" class="card-img-top rounded" alt='screenshot of PHP collection app'>
 					<div class="card-body">
 						<h5 class="card-title">COLLECTION APP</h5>
-						<p class="card-text">An app that shows a collection of games and lets users add their favourite game to an SQL database using PHP. This app uses form validation and sanitsation and prevents unsafe or malicious SQL injection.</p>
+						<p class="card-text">An app that shows a collection of games and lets users add their favourite game to an SQL database using PHP. This app uses form validation and sanitisation and prevents unsafe or malicious SQL injection.</p>
 					</div>
 					<div class="card-footer bg-transparent border-0">
 						<a href="https://github.com/alreuben/alr-collection" class="card-link" target="_blank">Github code</a>
